# micro-iot

./: Cargo.toml  Dockerfile
migrations/2018-09-29-183555_create_iot_data/: down.sql  up.sql
migrations/2018-10-04-092907_create_things/: down.sql  up.sql
src/: db.rs  iot_data.rs  main.rs  schema.rs
src/controllers/: iot_datas.rs  mod.rs  things.rs
src/models/: iot_data.rs  mod.rs  thing.rs
