[package]
name = "micro-iot"
version = "0.1.0"
authors = ["Terry Raimondo <terry.raimondo@gmail.com>"]

[dependencies]
rocket = "0.3"
rocket_codegen = "0.3"
rocket_contrib = { version = "0.3.16", default_features = false, features = ["json"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
diesel = { version = "1.3", features = ["sqlite", "r2d2", "chrono"] }
diesel_migrations = "1.3"
chrono = { version = "0.4.6", features = ["serde"] }
