[package]
name = "micro-iot"
version = "0.1.0"
authors = ["Terry Raimondo <terry.raimondo@gmail.com>"]

[dependencies]
rocket            = "0.3.17"
rocket_codegen    = "0.3.17"
rocket_contrib    = { version = "0.3.17", default_features = false, features = ["json"] }
serde             = "1.0.79"
serde_json        = "1.0.32"
serde_derive      = "1.0.79"
diesel            = { version = "1.3.3", features = ["sqlite", "r2d2", "chrono"] }
diesel_migrations = "1.3.0"
chrono            = { version = "0.4.6", features = ["serde"] }
web_token         = { version = "0.3.0", features = ["serde_support", "diesel_support"] }
